<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCg_kykFZgmmLBf7WblffsZ_SWdV7bNtIM</string>
    <!--BH30meNXVgQUpKJVCnHz2EXkBNIInFMRvXvmrJe-qaQonboYHQXsOQ9mggFvpizALVtUMBNS9vw_feKxKA9T28Y-->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Don\'t have an account? Signup</string>


    <!-- Strings related to Signup -->
    <string name="prompt_name">Name</string>
    <string name="prompt_contact_no">Contact No</string>
    <string name="create_account">Create Account</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_general">Something went wrong</string>

    <string name="action_settings">Settings</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="title_location_accuracy">GPS Settings</string>
    <string name="message_location_warning">Please turn on GPS</string>
    <string name="action_notnow">Not now</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_view_friends">ViewFriendsActivity</string>


</resources>
